# rust-inference-server

./: .gitignore  Dockerfile  README.md
python-model/: pyproject.toml
python-model/src/: main.py  model_test.py
python-server/: pyproject.toml
python-server/src/: main.py
rust-server/: Cargo.toml
rust-server/src/: main.rs
scripts/: build.sh  performance.sh  request.sh  run.sh
scripts/jsons/: request_params
