[project]
name = "python-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "polars>=1.12.0",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "tqdm>=4.66.6",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipython>=8.29.0",
]
